Replace page with kids coloring layout

--- a/index.html
+++ b/index.html
@@ -1,69 +1,413 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Digital Colouring Book</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <div class="app">
-      <header class="header">
-        <div>
-          <p class="eyebrow">Creative Playground</p>
-          <h1>Digital Colouring Book</h1>
-          <p class="subtitle">
-            Choose a template, pick a palette, and start colouring directly on the canvas.
-          </p>
-        </div>
-        <div class="header-actions">
-          <button id="download" class="primary">Download</button>
-        </div>
-      </header>
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <title>Kids Coloring Book</title>
 
-      <div class="layout">
-        <aside class="panel">
-          <section>
-            <h2>Templates</h2>
-            <div id="templates" class="template-grid"></div>
-          </section>
+  <style>
+    body {
+      background:#f7f7ff;
+      font-family: Arial, sans-serif;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      padding:20px;
+      margin:0;
+    }
 
-          <section>
-            <h2>Palette</h2>
-            <div id="palette" class="palette"></div>
-          </section>
+    h1 {
+      font-size:26px;
+      color:#444;
+      margin-bottom:10px;
+      text-align:center;
+    }
 
-          <section>
-            <h2>Tools</h2>
-            <div class="tools">
-              <label class="tool">
-                Brush size
-                <input id="brush" type="range" min="4" max="36" value="12" />
-              </label>
-              <label class="tool">
-                Eraser
-                <input id="eraser" type="checkbox" />
-              </label>
-              <div class="tool-buttons">
-                <button id="undo">Undo</button>
-                <button id="clear">Clear</button>
-              </div>
-            </div>
-          </section>
-        </aside>
+    #toolbar, #toolbar2, #pages {
+      margin-bottom:8px;
+      display:flex;
+      gap:8px;
+      flex-wrap:wrap;
+      justify-content:center;
+    }
 
-        <main class="canvas-area">
-          <div class="canvas-shell">
-            <canvas id="drawing" aria-label="Colouring canvas"></canvas>
-            <canvas id="outline" aria-hidden="true"></canvas>
-          </div>
-          <div class="helper">
-            Tip: Use a stylus or mouse to colour. Toggle the eraser to clean up inside the lines.
-          </div>
-        </main>
-      </div>
-    </div>
+    .color-btn {
+      width:34px;
+      height:34px;
+      border-radius:50%;
+      border:2px solid #ddd;
+      cursor:pointer;
+      box-sizing:border-box;
+    }
 
-    <script src="app.js"></script>
-  </body>
+    .color-btn.active {
+      border:3px solid #555;
+    }
+
+    .tool-btn, .page-btn, .size-btn, .sticker-btn {
+      border:none;
+      padding:6px 10px;
+      border-radius:12px;
+      cursor:pointer;
+      background:#ffffff;
+      box-shadow:0 1px 3px rgba(0,0,0,0.1);
+      font-size:14px;
+    }
+
+    .size-btn {
+      width:34px;
+      height:34px;
+      border-radius:50%;
+      padding:0;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-size:12px;
+    }
+
+    .tool-btn.active,
+    .page-btn.active,
+    .size-btn.active,
+    .sticker-btn.active {
+      background:#cfe7ff;
+    }
+
+    #clear {
+      background:#ff7676;
+      color:white;
+      font-weight:bold;
+    }
+
+    #save {
+      background:#7ccf7c;
+      color:white;
+      font-weight:bold;
+    }
+
+    #canvas-wrapper {
+      display:flex;
+      justify-content:center;
+      width:100%;
+    }
+
+    canvas {
+      border:5px solid #ddd;
+      border-radius:12px;
+      background:white;
+      touch-action:none;
+      max-width:100%;
+    }
+  </style>
+</head>
+
+<body>
+
+  <h1>Kids Coloring Book</h1>
+
+  <!-- Colour buttons -->
+  <div id="toolbar">
+    <div class="color-btn active" style="background:black" data-color="#000000"></div>
+    <div class="color-btn" style="background:red" data-color="#ff4b4b"></div>
+    <div class="color-btn" style="background:orange" data-color="#ff9a2f"></div>
+    <div class="color-btn" style="background:yellow" data-color="#ffd93b"></div>
+    <div class="color-btn" style="background:green" data-color="#4caf50"></div>
+    <div class="color-btn" style="background:blue" data-color="#2196f3"></div>
+    <div class="color-btn" style="background:purple" data-color="#9c27b0"></div>
+  </div>
+
+  <!-- Tools, brush sizes, stickers, save/clear -->
+  <div id="toolbar2">
+    <button class="tool-btn active" id="penTool">✏️ Draw</button>
+    <button class="tool-btn" id="eraserTool">🧽 Eraser</button>
+
+    <button class="size-btn active" data-size="4">S</button>
+    <button class="size-btn" data-size="8">M</button>
+    <button class="size-btn" data-size="14">L</button>
+
+    <button class="sticker-btn" data-sticker="⭐">⭐</button>
+    <button class="sticker-btn" data-sticker="❤️">❤️</button>
+    <button class="sticker-btn" data-sticker="😊">😊</button>
+
+    <button class="tool-btn" id="stickerTool">🎉 Stickers</button>
+
+    <button class="tool-btn" id="save">💾 Save</button>
+    <button class="tool-btn" id="clear">🧼 Clear</button>
+  </div>
+
+  <!-- Pages -->
+  <div id="pages">
+    <button class="page-btn active" data-page="animal">🐱 Animal</button>
+    <button class="page-btn" data-page="car">🚗 Car</button>
+    <button class="page-btn" data-page="shapes">🔺 Shapes</button>
+    <button class="page-btn" data-page="blank">📝 Blank</button>
+  </div>
+
+  <div id="canvas-wrapper">
+    <canvas id="canvas" width="700" height="450"></canvas>
+  </div>
+
+  <script>
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
+
+    let drawing = false;
+    let currentColor = "#000000";
+    let brushSize = 8;
+    let currentTool = "draw"; // "draw", "eraser", "sticker"
+    let currentSticker = "⭐";
+    let currentPage = "animal";
+
+    // --- Helper: get position for mouse/touch ---
+    function getPos(e) {
+      const rect = canvas.getBoundingClientRect();
+      if (e.touches && e.touches[0]) {
+        return {
+          x: e.touches[0].clientX - rect.left,
+          y: e.touches[0].clientY - rect.top
+        };
+      } else {
+        return {
+          x: e.clientX - rect.left,
+          y: e.clientY - rect.top
+        };
+      }
+    }
+
+    // --- Page outlines (simple line art) ---
+    function drawOutline(page) {
+      // white background
+      ctx.fillStyle = "white";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      ctx.save();
+      ctx.strokeStyle = "#cccccc";
+      ctx.lineWidth = 3;
+      ctx.lineCap = "round";
+      ctx.beginPath();
+
+      if (page === "animal") {
+        // simple cat face
+        // head
+        ctx.arc(350, 230, 100, 0, Math.PI * 2);
+        // ears
+        ctx.moveTo(290, 170);
+        ctx.lineTo(270, 130);
+        ctx.lineTo(310, 150);
+        ctx.moveTo(410, 170);
+        ctx.lineTo(430, 130);
+        ctx.lineTo(390, 150);
+        // eyes
+        ctx.moveTo(320, 220);
+        ctx.arc(310, 220, 10, 0, Math.PI * 2);
+        ctx.moveTo(390, 220);
+        ctx.arc(380, 220, 10, 0, Math.PI * 2);
+        // nose
+        ctx.moveTo(345, 240);
+        ctx.lineTo(355, 240);
+        ctx.lineTo(350, 250);
+        ctx.closePath();
+        // mouth
+        ctx.moveTo(350, 250);
+        ctx.quadraticCurveTo(335, 265, 320, 270);
+        ctx.moveTo(350, 250);
+        ctx.quadraticCurveTo(365, 265, 380, 270);
+      } else if (page === "car") {
+        // simple car shape
+        ctx.moveTo(150, 280);
+        ctx.lineTo(550, 280);
+        ctx.lineTo(580, 250);
+        ctx.lineTo(520, 220);
+        ctx.lineTo(400, 220);
+        ctx.lineTo(360, 180);
+        ctx.lineTo(250, 180);
+        ctx.lineTo(220, 220);
+        ctx.lineTo(150, 230);
+        ctx.closePath();
+        // wheels
+        ctx.moveTo(230, 280);
+        ctx.arc(230, 280, 40, 0, Math.PI * 2);
+        ctx.moveTo(470, 280);
+        ctx.arc(470, 280, 40, 0, Math.PI * 2);
+        // windows
+        ctx.moveTo(280, 220);
+        ctx.lineTo(350, 190);
+        ctx.lineTo(390, 190);
+        ctx.lineTo(390, 220);
+        ctx.closePath();
+      } else if (page === "shapes") {
+        // big circle
+        ctx.arc(200, 200, 70, 0, Math.PI * 2);
+        // triangle
+        ctx.moveTo(420, 140);
+        ctx.lineTo(520, 260);
+        ctx.lineTo(320, 260);
+        ctx.closePath();
+        // square
+        ctx.rect(260, 280, 120, 120);
+        // star (simple)
+        ctx.moveTo(540, 340);
+        ctx.lineTo(555, 380);
+        ctx.lineTo(600, 380);
+        ctx.lineTo(565, 405);
+        ctx.lineTo(580, 445);
+        ctx.lineTo(540, 420);
+        ctx.lineTo(500, 445);
+        ctx.lineTo(515, 405);
+        ctx.lineTo(480, 380);
+        ctx.lineTo(525, 380);
+        ctx.closePath();
+      } else if (page === "blank") {
+        // no outline, just white background
+      }
+
+      ctx.stroke();
+      ctx.restore();
+    }
+
+    // --- Drawing / stickers ---
+    function startDraw(e) {
+      e.preventDefault();
+      const pos = getPos(e);
+
+      if (currentTool === "sticker") {
+        ctx.save();
+        ctx.font = "48px Arial";
+        ctx.textAlign = "center";
+        ctx.textBaseline = "middle";
+        ctx.fillText(currentSticker, pos.x, pos.y);
+        ctx.restore();
+        return;
+      }
+
+      drawing = true;
+      ctx.beginPath();
+      ctx.moveTo(pos.x, pos.y);
+      draw(e);
+    }
+
+    function draw(e) {
+      e.preventDefault();
+      if (!drawing) return;
+      const pos = getPos(e);
+
+      ctx.lineWidth = brushSize;
+      ctx.lineCap = "round";
+      ctx.strokeStyle = (currentTool === "eraser") ? "#ffffff" : currentColor;
+
+      ctx.lineTo(pos.x, pos.y);
+      ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(pos.x, pos.y);
+    }
+
+    function endDraw(e) {
+      if (e) e.preventDefault();
+      drawing = false;
+      ctx.beginPath();
+    }
+
+    // --- Init page ---
+    drawOutline(currentPage);
+
+    // --- Color buttons ---
+    const colorBtns = document.querySelectorAll(".color-btn");
+    colorBtns.forEach(btn => {
+      btn.addEventListener("click", () => {
+        currentColor = btn.dataset.color;
+        currentTool = "draw";
+        document.getElementById("penTool").classList.add("active");
+        document.getElementById("eraserTool").classList.remove("active");
+        document.getElementById("stickerTool").classList.remove("active");
+
+        colorBtns.forEach(b => b.classList.remove("active"));
+        btn.classList.add("active");
+      });
+    });
+
+    // --- Brush sizes ---
+    const sizeBtns = document.querySelectorAll(".size-btn");
+    sizeBtns.forEach(btn => {
+      btn.addEventListener("click", () => {
+        brushSize = parseInt(btn.dataset.size, 10);
+        sizeBtns.forEach(b => b.classList.remove("active"));
+        btn.classList.add("active");
+      });
+    });
+
+    // --- Tools ---
+    const penTool = document.getElementById("penTool");
+    const eraserTool = document.getElementById("eraserTool");
+    const stickerTool = document.getElementById("stickerTool");
+    const stickerBtns = document.querySelectorAll(".sticker-btn");
+
+    penTool.addEventListener("click", () => {
+      currentTool = "draw";
+      penTool.classList.add("active");
+      eraserTool.classList.remove("active");
+      stickerTool.classList.remove("active");
+    });
+
+    eraserTool.addEventListener("click", () => {
+      currentTool = "eraser";
+      eraserTool.classList.add("active");
+      penTool.classList.remove("active");
+      stickerTool.classList.remove("active");
+    });
+
+    stickerTool.addEventListener("click", () => {
+      currentTool = "sticker";
+      stickerTool.classList.add("active");
+      penTool.classList.remove("active");
+      eraserTool.classList.remove("active");
+    });
+
+    stickerBtns.forEach(btn => {
+      btn.addEventListener("click", () => {
+        currentSticker = btn.dataset.sticker;
+        currentTool = "sticker";
+        stickerTool.classList.add("active");
+        penTool.classList.remove("active");
+        eraserTool.classList.remove("active");
+        stickerBtns.forEach(b => b.classList.remove("active"));
+        btn.classList.add("active");
+      });
+    });
+
+    // --- Pages ---
+    const pageBtns = document.querySelectorAll(".page-btn");
+    pageBtns.forEach(btn => {
+      btn.addEventListener("click", () => {
+        currentPage = btn.dataset.page;
+        pageBtns.forEach(b => b.classList.remove("active"));
+        btn.classList.add("active");
+        drawOutline(currentPage);
+      });
+    });
+
+    // --- Clear button (keep outline) ---
+    document.getElementById("clear").addEventListener("click", () => {
+      drawOutline(currentPage);
+    });
+
+    // --- Save button ---
+    document.getElementById("save").addEventListener("click", () => {
+      const link = document.createElement("a");
+      link.href = canvas.toDataURL("image/png");
+      link.download = "my-coloring.png";
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    });
+
+    // --- Canvas events (mouse + touch) ---
+    canvas.addEventListener("mousedown", startDraw);
+    canvas.addEventListener("mousemove", draw);
+    canvas.addEventListener("mouseup", endDraw);
+    canvas.addEventListener("mouseleave", endDraw);
+
+    canvas.addEventListener("touchstart", startDraw, { passive:false });
+    canvas.addEventListener("touchmove", draw, { passive:false });
+    canvas.addEventListener("touchend", endDraw, { passive:false });
+  </script>
+
+</body>
 </html>
