--- a/index.html
+++ b/index.html
@@ -5,196 +5,345 @@
   <title>Kids Coloring Book</title>
 
   <style>
+    :root {
+      color-scheme: light;
+      --bg: #f4f3ff;
+      --card: #ffffff;
+      --ink: #1f1f2b;
+      --muted: #6b6b7d;
+      --accent: #7b5cff;
+      --accent-soft: #efeaff;
+      --outline: #e1def2;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      background:#f7f7ff;
-      font-family: Arial, sans-serif;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      padding:20px;
-      margin:0;
+      background: var(--bg);
+      font-family: "Inter", "Segoe UI", system-ui, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 24px;
+      margin: 0;
+      color: var(--ink);
     }
 
-    h1 {
-      font-size:26px;
-      color:#444;
-      margin-bottom:10px;
-      text-align:center;
+    .app {
+      width: min(1100px, 100%);
+      display: flex;
+      flex-direction: column;
+      gap: 18px;
     }
 
-    #toolbar, #toolbar2, #pages {
-      margin-bottom:8px;
-      display:flex;
-      gap:8px;
-      flex-wrap:wrap;
-      justify-content:center;
+    .hero {
+      background: linear-gradient(135deg, #ffffff 0%, #f1ecff 100%);
+      border-radius: 22px;
+      padding: 22px 26px;
+      box-shadow: 0 18px 40px rgba(55, 32, 120, 0.08);
+      display: flex;
+      justify-content: space-between;
+      gap: 20px;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+
+    .hero h1 {
+      font-size: 28px;
+      margin: 0 0 6px;
+    }
+
+    .hero p {
+      margin: 0;
+      color: var(--muted);
+    }
+
+    .hero .badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      background: var(--accent-soft);
+      color: var(--accent);
+      border-radius: 999px;
+      padding: 6px 12px;
+      font-size: 12px;
+      font-weight: 600;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+    }
+
+    .panel {
+      background: var(--card);
+      border-radius: 20px;
+      padding: 16px 18px;
+      border: 1px solid var(--outline);
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .section-title {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
+
+    .section-title h2 {
+      font-size: 18px;
+      margin: 0;
+    }
+
+    .section-title span {
+      color: var(--muted);
+      font-size: 13px;
+    }
+
+    #toolbar, #toolbar2, #pages, #categories {
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
+
+    #toolbar {
+      align-items: center;
+    }
+
+    #toolbar2 {
+      align-items: center;
+    }
+
+    #categories {
+      justify-content: flex-start;
     }
 
     .color-btn {
-      width:30px;
-      height:30px;
-      border-radius:50%;
-      border:2px solid #ddd;
-      cursor:pointer;
-      box-sizing:border-box;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      border: 2px solid #ddd;
+      cursor: pointer;
+      box-sizing: border-box;
     }
 
     .color-btn.active {
-      border:3px solid #555;
+      border: 3px solid #555;
     }
 
-    .tool-btn, .page-btn, .size-btn, .brush-btn, .sticker-btn {
-      border:none;
-      padding:6px 10px;
-      border-radius:12px;
-      cursor:pointer;
-      background:#ffffff;
-      box-shadow:0 1px 3px rgba(0,0,0,0.1);
-      font-size:13px;
-      display:flex;
-      align-items:center;
-      gap:4px;
+    .tool-btn, .page-btn, .size-btn, .brush-btn, .sticker-btn, .category-btn {
+      border: none;
+      padding: 6px 12px;
+      border-radius: 12px;
+      cursor: pointer;
+      background: #ffffff;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.08);
+      font-size: 13px;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      transition: transform 0.1s ease, box-shadow 0.1s ease;
+    }
+
+    .tool-btn:hover,
+    .page-btn:hover,
+    .size-btn:hover,
+    .brush-btn:hover,
+    .sticker-btn:hover,
+    .category-btn:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 3px 8px rgba(0,0,0,0.12);
     }
 
     .size-btn, .brush-btn {
-      font-size:12px;
+      font-size: 12px;
     }
 
     .size-btn {
-      width:34px;
-      height:34px;
-      border-radius:50%;
-      padding:0;
-      justify-content:center;
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      padding: 0;
+      justify-content: center;
     }
 
     .tool-btn.active,
     .page-btn.active,
     .size-btn.active,
     .brush-btn.active,
-    .sticker-btn.active {
-      background:#cfe7ff;
+    .sticker-btn.active,
+    .category-btn.active {
+      background: var(--accent-soft);
+      color: var(--accent);
     }
 
     #clear {
-      background:#ff7676;
-      color:white;
-      font-weight:bold;
+      background: #ff7676;
+      color: white;
+      font-weight: bold;
     }
 
     #save {
-      background:#7ccf7c;
-      color:white;
-      font-weight:bold;
+      background: #7ccf7c;
+      color: white;
+      font-weight: bold;
+    }
+
+    .page-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
     }
 
     #canvas-wrapper {
-      display:flex;
-      justify-content:center;
-      width:100%;
+      display: flex;
+      justify-content: center;
+      width: 100%;
     }
 
     #canvas-stack {
-      position:relative;
-      border:5px solid #ddd;
-      border-radius:12px;
-      overflow:hidden;
-      background:white;
-      touch-action:none;
-      max-width:100%;
+      position: relative;
+      border: 5px solid #ddd;
+      border-radius: 16px;
+      overflow: hidden;
+      background: white;
+      touch-action: none;
+      max-width: 100%;
+      width: 700px;
+      box-shadow: 0 18px 40px rgba(35, 24, 90, 0.12);
     }
 
     #outlineCanvas,
     #drawCanvas {
-      position:absolute;
-      top:0;
-      left:0;
-      width:700px;
-      height:450px;
-      max-width:100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 700px;
+      height: 450px;
+      max-width: 100%;
     }
 
     /* Make canvas responsive */
     @media (max-width: 750px) {
       #outlineCanvas,
       #drawCanvas {
-        width:100%;
-        height:auto;
+        width: 100%;
+        height: auto;
+      }
+
+      #canvas-stack {
+        width: 100%;
       }
     }
 
     #colorPicker {
-      padding:0;
-      width:40px;
-      height:34px;
-      border-radius:8px;
-      border:1px solid #ccc;
-      cursor:pointer;
+      padding: 0;
+      width: 40px;
+      height: 34px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      cursor: pointer;
+    }
+
+    .helper-note {
+      font-size: 12px;
+      color: var(--muted);
     }
   </style>
 </head>
 
 <body>
+  <div class="app">
+    <header class="hero">
+      <div>
+        <span class="badge">🎨 Creative play</span>
+        <h1>Kids Coloring Book</h1>
+        <p>Pick a category, choose a page, and start coloring with fun brushes.</p>
+      </div>
+      <div class="helper-note">Tip: Save your masterpiece when you're done!</div>
+    </header>
 
-  <h1>Kids Coloring Book</h1>
+    <section class="panel">
+      <div class="section-title">
+        <h2>Color Palette</h2>
+        <span>Tap a swatch or use the picker for custom shades.</span>
+      </div>
+      <div id="toolbar">
+        <div class="color-btn active" style="background:#000000" data-color="#000000"></div>
+        <div class="color-btn" style="background:#ff4b4b" data-color="#ff4b4b"></div>
+        <div class="color-btn" style="background:#ff9a2f" data-color="#ff9a2f"></div>
+        <div class="color-btn" style="background:#ffd93b" data-color="#ffd93b"></div>
+        <div class="color-btn" style="background:#4caf50" data-color="#4caf50"></div>
+        <div class="color-btn" style="background:#2196f3" data-color="#2196f3"></div>
+        <div class="color-btn" style="background:#9c27b0" data-color="#9c27b0"></div>
+        <div class="color-btn" style="background:#ff6ec7" data-color="#ff6ec7"></div>
+        <div class="color-btn" style="background:#8d6e63" data-color="#8d6e63"></div>
+        <label class="tool-btn">
+          🎨
+          <input type="color" id="colorPicker" value="#000000" />
+        </label>
+      </div>
+    </section>
 
-  <!-- Colours -->
-  <div id="toolbar">
-    <div class="color-btn active" style="background:#000000" data-color="#000000"></div>
-    <div class="color-btn" style="background:#ff4b4b" data-color="#ff4b4b"></div>
-    <div class="color-btn" style="background:#ff9a2f" data-color="#ff9a2f"></div>
-    <div class="color-btn" style="background:#ffd93b" data-color="#ffd93b"></div>
-    <div class="color-btn" style="background:#4caf50" data-color="#4caf50"></div>
-    <div class="color-btn" style="background:#2196f3" data-color="#2196f3"></div>
-    <div class="color-btn" style="background:#9c27b0" data-color="#9c27b0"></div>
-    <div class="color-btn" style="background:#ff6ec7" data-color="#ff6ec7"></div>
-    <div class="color-btn" style="background:#8d6e63" data-color="#8d6e63"></div>
-    <label class="tool-btn">
-      🎨
-      <input type="color" id="colorPicker" value="#000000" />
-    </label>
-  </div>
+    <section class="panel">
+      <div class="section-title">
+        <h2>Tools & Effects</h2>
+        <span>Switch between brushes, stickers, and erase mode.</span>
+      </div>
+      <div id="toolbar2">
+        <button class="tool-btn active" id="penTool">✏️ Draw</button>
+        <button class="tool-btn" id="eraserTool">🧽 Eraser</button>
 
-  <!-- Tools, brush, size, stickers, save/clear -->
-  <div id="toolbar2">
-    <button class="tool-btn active" id="penTool">✏️ Draw</button>
-    <button class="tool-btn" id="eraserTool">🧽 Eraser</button>
+        <button class="size-btn active" data-size="4">S</button>
+        <button class="size-btn" data-size="8">M</button>
+        <button class="size-btn" data-size="14">L</button>
 
-    <button class="size-btn active" data-size="4">S</button>
-    <button class="size-btn" data-size="8">M</button>
-    <button class="size-btn" data-size="14">L</button>
+        <button class="brush-btn active" data-brush="normal">Smooth</button>
+        <button class="brush-btn" data-brush="dashed">Dashed</button>
+        <button class="brush-btn" data-brush="marker">Marker</button>
+        <button class="brush-btn" data-brush="fuzzy">Fuzzy</button>
 
-    <button class="brush-btn active" data-brush="normal">Smooth</button>
-    <button class="brush-btn" data-brush="dashed">Dashed</button>
-    <button class="brush-btn" data-brush="marker">Marker</button>
-    <button class="brush-btn" data-brush="fuzzy">Fuzzy</button>
+        <button class="sticker-btn" data-sticker="⭐">⭐</button>
+        <button class="sticker-btn" data-sticker="❤️">❤️</button>
+        <button class="sticker-btn" data-sticker="😊">😊</button>
+        <button class="tool-btn" id="stickerTool">🎉 Stickers</button>
 
-    <button class="sticker-btn" data-sticker="⭐">⭐</button>
-    <button class="sticker-btn" data-sticker="❤️">❤️</button>
-    <button class="sticker-btn" data-sticker="😊">😊</button>
-    <button class="tool-btn" id="stickerTool">🎉 Stickers</button>
+        <button class="tool-btn" id="save">💾 Save</button>
+        <button class="tool-btn" id="clear">🧼 Clear</button>
+      </div>
+    </section>
 
-    <button class="tool-btn" id="save">💾 Save</button>
-    <button class="tool-btn" id="clear">🧼 Clear</button>
-  </div>
+    <section class="panel">
+      <div class="section-title">
+        <h2>Pick a Coloring Page</h2>
+        <span>Browse by category to find your next adventure.</span>
+      </div>
+      <div id="categories">
+        <button class="category-btn active" data-category="all">✨ All</button>
+        <button class="category-btn" data-category="animals">🐾 Animals</button>
+        <button class="category-btn" data-category="vehicles">🚗 Vehicles</button>
+        <button class="category-btn" data-category="shapes">🔷 Shapes</button>
+        <button class="category-btn" data-category="scenes">🌈 Scenes</button>
+        <button class="category-btn" data-category="blank">📝 Blank</button>
+      </div>
+      <div id="pages" class="page-grid">
+        <button class="page-btn active" data-page="catEasy" data-category="animals">🐱 Cat (Easy)</button>
+        <button class="page-btn" data-page="dinoHard" data-category="animals">🦕 Dino (Hard)</button>
+        <button class="page-btn" data-page="car" data-category="vehicles">🚗 Car</button>
+        <button class="page-btn" data-page="rocket" data-category="vehicles">🚀 Rocket</button>
+        <button class="page-btn" data-page="shapesEasy" data-category="shapes">🔵 Shapes (Easy)</button>
+        <button class="page-btn" data-page="shapesHard" data-category="shapes">🧩 Shapes (Challenge)</button>
+        <button class="page-btn" data-page="houseScene" data-category="scenes">🏡 House Scene</button>
+        <button class="page-btn" data-page="rainbowScene" data-category="scenes">🌈 Rainbow Scene</button>
+        <button class="page-btn" data-page="blank" data-category="blank">📝 Blank</button>
+      </div>
+    </section>
 
-  <!-- Pages (categories / difficulty) -->
-  <div id="pages">
-    <button class="page-btn active" data-page="catEasy">🐱 Cat (Easy)</button>
-    <button class="page-btn" data-page="dinoHard">🦕 Dino (Hard)</button>
-    <button class="page-btn" data-page="car">🚗 Car</button>
-    <button class="page-btn" data-page="rocket">🚀 Rocket</button>
-    <button class="page-btn" data-page="shapesEasy">🔵 Shapes (Easy)</button>
-    <button class="page-btn" data-page="shapesHard">🧩 Shapes (Challenge)</button>
-    <button class="page-btn" data-page="houseScene">🏡 House Scene</button>
-    <button class="page-btn" data-page="rainbowScene">🌈 Rainbow Scene</button>
-    <button class="page-btn" data-page="blank">📝 Blank</button>
-  </div>
-
-  <div id="canvas-wrapper">
-    <div id="canvas-stack">
-      <canvas id="outlineCanvas" width="700" height="450"></canvas>
-      <canvas id="drawCanvas" width="700" height="450"></canvas>
+    <div id="canvas-wrapper">
+      <div id="canvas-stack">
+        <canvas id="outlineCanvas" width="700" height="450"></canvas>
+        <canvas id="drawCanvas" width="700" height="450"></canvas>
+      </div>
     </div>
   </div>
 
@@ -622,6 +771,37 @@
         pageBtns.forEach(b => b.classList.remove("active"));
         btn.classList.add("active");
         drawOutline(currentPage);
+      });
+    });
+
+    // --- Categories ---
+    const categoryBtns = document.querySelectorAll(".category-btn");
+
+    function updateCategory(category) {
+      categoryBtns.forEach(btn => btn.classList.remove("active"));
+      document.querySelector(`.category-btn[data-category="${category}"]`).classList.add("active");
+
+      let firstVisible = null;
+
+      pageBtns.forEach(btn => {
+        const matches = category === "all" || btn.dataset.category === category;
+        btn.style.display = matches ? "inline-flex" : "none";
+        if (matches && !firstVisible) {
+          firstVisible = btn;
+        }
+      });
+
+      if (firstVisible && !firstVisible.classList.contains("active")) {
+        pageBtns.forEach(b => b.classList.remove("active"));
+        firstVisible.classList.add("active");
+        currentPage = firstVisible.dataset.page;
+        drawOutline(currentPage);
+      }
+    }
+
+    categoryBtns.forEach(btn => {
+      btn.addEventListener("click", () => {
+        updateCategory(btn.dataset.category);
       });
     });
 
