--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
       background: white;
       touch-action: none;
       max-width: 100%;
-      width: 700px;
+      width: min(900px, 100%);
+      aspect-ratio: 700 / 450;
       box-shadow: 0 18px 40px rgba(35, 24, 90, 0.12);
     }
 
@@ -247,8 +248,8 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 700px;
-      height: 450px;
+      width: 100%;
+      height: 100%;
       max-width: 100%;
     }
 
@@ -378,8 +379,8 @@
       <div class="canvas-area">
         <div id="canvas-wrapper">
           <div id="canvas-stack">
-            <canvas id="outlineCanvas" width="700" height="450"></canvas>
-            <canvas id="drawCanvas" width="700" height="450"></canvas>
+            <canvas id="outlineCanvas" width="900" height="580"></canvas>
+            <canvas id="drawCanvas" width="900" height="580"></canvas>
           </div>
         </div>
       </div>
@@ -438,12 +439,21 @@
       }
     }
 
+    const baseCanvasWidth = 700;
+    const baseCanvasHeight = 450;
+
     // --- Draw page outlines on OUTLINE canvas only ---
     function drawOutline(page) {
+      const scaleX = outlineCanvas.width / baseCanvasWidth;
+      const scaleY = outlineCanvas.height / baseCanvasHeight;
+
       outlineCtx.save();
+      outlineCtx.setTransform(1, 0, 0, 1, 0, 0);
+      outlineCtx.clearRect(0, 0, outlineCanvas.width, outlineCanvas.height);
+      outlineCtx.setTransform(scaleX, 0, 0, scaleY, 0, 0);
       // white background
       outlineCtx.fillStyle = "white";
-      outlineCtx.fillRect(0, 0, outlineCanvas.width, outlineCanvas.height);
+      outlineCtx.fillRect(0, 0, baseCanvasWidth, baseCanvasHeight);
 
       outlineCtx.strokeStyle = "#bbbbbb";
       outlineCtx.lineWidth = 3;
